[metadata]
name = heatpanel
version = 1.1.4
author = Ben Winchester
author_email = benedict.winchester@gmail.com
description = Hybrid Electric and Heat Panel Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenWinchester/PVTModel
project_urls =
    Bug Tracker = https://github.com/BenWinchester/PVTModel/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    black >=20.8b1
    colorclass >=2.2.0
    data-science-types >=0.2.23
    dtreeviz>=1.3.1
    entrypoints >=0.3
    importlib-metadata >=3.4.0
    iniconfig >=1.1.1
    isort >=5.7.0
    jedi >=0.18.0
    keyring >=17.1.1
    kiwisolver >=1.3.1
    matplotlib >=3.3.4
    mypy >=0.812
    numpy >=1.20.1
    packaging >=20.9
    pandas >=1.2.3
    pylint >=2.7.2
    pysolar >=0.9
    pytest >=6.2.2
    python-dateutil >=2.8.1
    pytz >=2021.1
    PyYAML >=5.4.1
    regex >=2021.3.17
    scipy >=1.6.1
    scikit-learn >=0.0
    tqdm >=4.59.0
    types-python-dateutil >=0.1.2
    types-pytz >=0.1.0
    types-PyYaml >=0.1.6
    yamllint >=1.15.0
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    heatpanel = pvt_model.scripts.heatpanel:main

[options.packages.find]
where = src
